--- a/package.json
+++ b/package.json
@@ -85,5 +85,9 @@
     "ts-node": "^10.4.0",
     "typechain": "^6.1.0",
     "typescript": "^4.5.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
+    "@sushiswap/core": "^1.4.2"
   }
 }
